force-app/main/default/objects/Export_Purchases_Tracability__c/Export_Purchases_Tracability__c.object-meta.xml
<CustomObject>
    <description>Object to trace export of purchases</description>
    <label>Export Purchases Tracability</label>
    <nameField>
        <label>Export Purchases Tracability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Export Purchases Tracabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>