force-app/main/default/objects/Export_Purchases_Tracability__c/fields/API_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>API_Error_Message__c</fullName>
    <label>API Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>