force-app/main/default/objects/Export_Purchases_Tracability__c/fields/contentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>contentDocumentId__c</fullName>
    <label>Content Document Id</label>
    <type>TextArea</type>
</CustomField>