force-app/main/default/objects/Export_Purchases_Tracability__c/fields/DreamId__c.field-meta.xml
<CustomField>
    <fullName>DreamId__c</fullName>
    <description>dream id of the client on whom we do the export</description>
    <label>DreamId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>