force-app/main/default/objects/Export_Purchases_Tracability__c/fields/File_content__c.field-meta.xml
<CustomField>
    <fullName>File_content__c</fullName>
    <label>File content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>