force-app/main/default/objects/Export_Purchases_Tracability__c/fields/Public_File_Link__c.field-meta.xml
<CustomField>
    <fullName>Public_File_Link__c</fullName>
    <label>Public File Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>