force-app/main/default/objects/Export_Purchases_Tracability__c/fields/versionId__c.field-meta.xml
<CustomField>
    <fullName>versionId__c</fullName>
    <label>versionId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>